--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "analyze": "bun --watch run cli.ts analyze --depth 3 --phrase 'pato'"
   }
 }
