--- a/cli/package.json
+++ b/cli/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^22.7.9"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
